# face_classifier

./: .gitattributes  .gitignore  Cargo.toml  README.md  code_walkthrough_checkin_2.mov  face_classifier_training_resnet50.ipynb  prepare_dataset.py
models/resnet18/: fc_layer_resnet18_cpu.pt
models/resnet34/: fc_layer_resnet34_cpu.pt  resnet34.ot
models/resnet50/: fc_layer_resnet50_cpu.pt
scripts/: run_resnet18.sh  run_resnet34.sh  run_resnet50.sh
training_scripts_for_colab/: face_classifier_training_resnet18.ipynb  face_classifier_training_resnet34.ipynb  face_classifier_training_resnet50.ipynb
